# magic-battle

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: components.hpp  ndspp.hpp  systems.hpp  tecs-system.hpp  tecs.hpp  unusual_id_manager.hpp  util.hpp
sounds/: explosion.sfxr  fancy-fireball.sfxr  fireball.sfxr  hit.sfxr  teleport.sfxr
source/: main.c  main.cpp  ndspp.cpp  systems.cpp  tecs-system.cpp  tecs.cpp  unusual.cpp  util.cpp
sprites/: player.grit
